--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
  
@@ -37,6 +38,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  on_audio_query: ^2.6.1
+  
+  just_audio: ^0.9.30
+  audio_video_progress_bar: ^0.11.0
+  just_audio_background: ^0.0.1-beta.7
+  provider: ^6.0.3
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +71,8 @@ flutter:
   
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - lib/assets/AudioMarkSplashScreen.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
