--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   audio_video_progress_bar: ^0.11.0
   just_audio_background: ^0.0.1-beta.7
   provider: ^6.0.3
+  on_audio_room: ^2.2.1+1
 
   
 
